[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Character Assets/StaticBody2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Character Assets/Bowser.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Character Assets/Interactive.gd" type="Script" id=3]
[ext_resource path="res://Assets/World_Assets/tiles-2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Character Assets/weak_toad.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Character Assets/smart_toad.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Character Assets/Hammer_Toad.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Character Assets/Coin.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Character Assets/Pipe.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/World_Assets/Background.png" type="Texture" id=10]
[ext_resource path="res://Assets/Character Assets/Level2.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Character Assets/WEAKWEAK.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Character Assets/Enemy_Spawner.tscn" type="PackedScene" id=13]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=2]
0/name = "Coin_Block 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 17, 17, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
4/name = "Mushroom_Block 1"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 34, 17, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "tiles-2.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 272, 0, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=4]
0/name = "tiles-2.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 34, 102, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 21 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = -1
1/name = "tiles-2.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 85, 68, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 15 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tiles-2.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 102, 68, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 16 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "tiles-2.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 85, 51, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 8 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "tiles-2.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 102, 51, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 18 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "tiles-2.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 34, 119, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 22 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "tiles-2.png 6"
6/texture = ExtResource( 4 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 17, 0, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 23 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "tiles-2.png 7"
7/texture = ExtResource( 4 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 34, 102, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 24 )
7/shape_one_way = true
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "tiles-2.png 8"
8/texture = ExtResource( 4 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 34, 119, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = -1

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Bowser" parent="." instance=ExtResource( 2 )]
pause_mode = 2
position = Vector2( 80, 272 )
collision_mask = 2147483902
jump_height = 75.0
jump_time_to_peak = 0.6
jump_time_to_descent = 0.4

[node name="Camera2D" type="Camera2D" parent="Bowser"]
current = true
limit_top = -122
limit_bottom = 300
limit_smoothed = true
smoothing_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Interactive" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 655375, 0, 0, 655376, 0, 0, 917517, 0, 0, 917518, 0, 0, 917523, 4, 0, 917565, 4, 0, 917572, 4, 0 )

[node name="TileMap" type="TileMap" parent="."]
show_behind_parent = true
z_index = 1
tile_set = SubResource( 4 )
cell_size = Vector2( 16, 16 )
show_collision = true
collision_layer = 2097160
format = 1
tile_data = PoolIntArray( 524383, 6, 0, 524392, 6, 0, 589919, 6, 0, 589928, 6, 0, 655455, 6, 0, 655464, 6, 0, 720992, 6, 0, 720993, 6, 0, 720994, 6, 0, 720995, 6, 0, 720996, 6, 0, 720997, 6, 0, 720998, 6, 0, 720999, 6, 0, 786514, 7, 0, 786515, 7, 0, 786516, 7, 0, 786517, 7, 0, 786518, 7, 0, 852050, 8, 0, 852051, 8, 0, 852052, 8, 0, 852053, 8, 0, 852054, 8, 0, 917519, 6, 0, 917520, 6, 0, 917521, 6, 0, 917522, 6, 0, 917541, 3, 0, 917542, 4, 0, 917586, 8, 0, 917587, 8, 0, 917588, 8, 0, 917589, 8, 0, 917590, 8, 0, 983077, 1, 0, 983078, 2, 0, 983095, 3, 0, 983096, 4, 0, 983118, 7, 0, 983119, 7, 0, 983120, 7, 0, 983121, 7, 0, 983122, 8, 0, 983123, 8, 0, 983124, 8, 0, 983125, 8, 0, 983126, 8, 0, 1048613, 1, 0, 1048614, 2, 0, 1048631, 1, 0, 1048632, 2, 0, 1048654, 8, 0, 1048655, 8, 0, 1048656, 8, 0, 1048657, 8, 0, 1048658, 8, 0, 1048659, 8, 0, 1048660, 8, 0, 1048661, 8, 0, 1048662, 8, 0, 1048684, 0, 0, 1048685, 0, 0, 1048686, 0, 0, 1048698, 3, 0, 1048699, 4, 0, 1048712, 0, 0, 1048713, 0, 0, 1048714, 0, 0, 1114149, 1, 0, 1114150, 2, 0, 1114167, 1, 0, 1114168, 2, 0, 1114190, 8, 0, 1114191, 8, 0, 1114192, 8, 0, 1114193, 8, 0, 1114194, 8, 0, 1114195, 8, 0, 1114196, 8, 0, 1114197, 8, 0, 1114198, 8, 0, 1114220, 5, 0, 1114221, 5, 0, 1114222, 5, 0, 1114234, 1, 0, 1114235, 2, 0, 1114248, 5, 0, 1114249, 5, 0, 1114250, 5, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 1179682, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1179685, 0, 0, 1179686, 0, 0, 1179703, 0, 0, 1179704, 0, 0, 1179705, 0, 0, 1179706, 0, 0, 1179707, 0, 0, 1179708, 0, 0, 1179709, 0, 0, 1179710, 0, 0, 1179711, 0, 0, 1179712, 0, 0, 1179713, 0, 0, 1179714, 0, 0, 1179715, 0, 0, 1179716, 0, 0, 1179717, 0, 0, 1179718, 0, 0, 1179719, 0, 0, 1179720, 0, 0, 1179721, 0, 0, 1179722, 0, 0, 1179723, 0, 0, 1179724, 0, 0, 1179725, 0, 0, 1179726, 0, 0, 1179727, 0, 0, 1179728, 0, 0, 1179729, 0, 0, 1179730, 0, 0, 1179731, 0, 0, 1179732, 0, 0, 1179733, 0, 0, 1179734, 0, 0, 1179756, 5, 0, 1179757, 5, 0, 1179758, 5, 0, 1179759, 0, 0, 1179760, 0, 0, 1179761, 0, 0, 1179762, 0, 0, 1179763, 0, 0, 1179764, 0, 0, 1179765, 0, 0, 1179766, 0, 0, 1179767, 0, 0, 1179768, 0, 0, 1179769, 0, 0, 1179770, 0, 0, 1179771, 0, 0, 1179772, 0, 0, 1179773, 0, 0, 1179774, 0, 0, 1179775, 0, 0, 1179776, 0, 0, 1179777, 0, 0, 1179778, 0, 0, 1179779, 0, 0, 1179780, 0, 0, 1179781, 0, 0, 1179782, 0, 0, 1179783, 0, 0, 1179784, 5, 0, 1179785, 5, 0, 1179786, 5, 0, 1245188, 5, 0, 1245189, 5, 0, 1245190, 5, 0, 1245191, 5, 0, 1245192, 5, 0, 1245193, 5, 0, 1245194, 5, 0, 1245195, 5, 0, 1245196, 5, 0, 1245197, 5, 0, 1245198, 5, 0, 1245199, 5, 0, 1245200, 5, 0, 1245201, 5, 0, 1245202, 5, 0, 1245203, 5, 0, 1245204, 5, 0, 1245205, 5, 0, 1245206, 5, 0, 1245207, 5, 0, 1245208, 5, 0, 1245209, 5, 0, 1245210, 5, 0, 1245211, 5, 0, 1245212, 5, 0, 1245213, 5, 0, 1245214, 5, 0, 1245215, 5, 0, 1245216, 5, 0, 1245217, 5, 0, 1245218, 5, 0, 1245219, 5, 0, 1245220, 5, 0, 1245221, 5, 0, 1245222, 5, 0, 1245239, 5, 0, 1245240, 5, 0, 1245241, 5, 0, 1245242, 5, 0, 1245243, 5, 0, 1245244, 5, 0, 1245245, 5, 0, 1245246, 5, 0, 1245247, 5, 0, 1245248, 5, 0, 1245249, 5, 0, 1245250, 5, 0, 1245251, 5, 0, 1245252, 5, 0, 1245253, 5, 0, 1245254, 5, 0, 1245255, 5, 0, 1245256, 5, 0, 1245257, 5, 0, 1245258, 5, 0, 1245259, 5, 0, 1245260, 5, 0, 1245261, 5, 0, 1245262, 5, 0, 1245263, 5, 0, 1245264, 5, 0, 1245265, 5, 0, 1245266, 5, 0, 1245267, 5, 0, 1245268, 5, 0, 1245269, 5, 0, 1245270, 5, 0, 1245292, 5, 0, 1245293, 5, 0, 1245294, 5, 0, 1245295, 5, 0, 1245296, 5, 0, 1245297, 5, 0, 1245298, 5, 0, 1245299, 5, 0, 1245300, 5, 0, 1245301, 5, 0, 1245302, 5, 0, 1245303, 5, 0, 1245304, 5, 0, 1245305, 5, 0, 1245306, 5, 0, 1245307, 5, 0, 1245308, 5, 0, 1245309, 5, 0, 1245310, 5, 0, 1245311, 5, 0, 1245312, 5, 0, 1245313, 5, 0, 1245314, 5, 0, 1245315, 5, 0, 1245316, 5, 0, 1245317, 5, 0, 1245318, 5, 0, 1245319, 5, 0, 1245320, 5, 0, 1245321, 5, 0, 1245322, 5, 0, 1310724, 5, 0, 1310725, 5, 0, 1310726, 5, 0, 1310727, 5, 0, 1310728, 5, 0, 1310729, 5, 0, 1310730, 5, 0, 1310731, 5, 0, 1310732, 5, 0, 1310733, 5, 0, 1310734, 5, 0, 1310735, 5, 0, 1310736, 5, 0, 1310737, 5, 0, 1310738, 5, 0, 1310739, 5, 0, 1310740, 5, 0, 1310741, 5, 0, 1310742, 5, 0, 1310743, 5, 0, 1310744, 5, 0, 1310745, 5, 0, 1310746, 5, 0, 1310747, 5, 0, 1310748, 5, 0, 1310749, 5, 0, 1310750, 5, 0, 1310751, 5, 0, 1310752, 5, 0, 1310753, 5, 0, 1310754, 5, 0, 1310755, 5, 0, 1310756, 5, 0, 1310757, 5, 0, 1310758, 5, 0, 1310775, 5, 0, 1310776, 5, 0, 1310777, 5, 0, 1310778, 5, 0, 1310779, 5, 0, 1310780, 5, 0, 1310781, 5, 0, 1310782, 5, 0, 1310783, 5, 0, 1310784, 5, 0, 1310785, 5, 0, 1310786, 5, 0, 1310787, 5, 0, 1310788, 5, 0, 1310789, 5, 0, 1310790, 5, 0, 1310791, 5, 0, 1310792, 5, 0, 1310793, 5, 0, 1310794, 5, 0, 1310795, 5, 0, 1310796, 5, 0, 1310797, 5, 0, 1310798, 5, 0, 1310799, 5, 0, 1310800, 5, 0, 1310801, 5, 0, 1310802, 5, 0, 1310803, 5, 0, 1310804, 5, 0, 1310805, 5, 0, 1310806, 5, 0 )

[node name="StaticBody2D" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 85, 196 )

[node name="Blocks" type="Node2D" parent="."]

[node name="coin" parent="." instance=ExtResource( 8 )]
position = Vector2( 632, 192 )

[node name="Weak_Toad" parent="." instance=ExtResource( 5 )]
position = Vector2( 744, 208 )

[node name="Weak_Toad2" parent="." instance=ExtResource( 6 )]
position = Vector2( 944, 264 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 0, -120 )
motion_mirroring = Vector2( 512, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 10 )
centered = false

[node name="Pipe" parent="." instance=ExtResource( 9 )]
position = Vector2( 608, 216 )
collision_layer = 0
collision_mask = 255
next_scene = ExtResource( 11 )

[node name="coin2" parent="." instance=ExtResource( 8 )]
position = Vector2( 856, 168 )

[node name="coin3" parent="." instance=ExtResource( 8 )]
position = Vector2( 648, 168 )

[node name="coin4" parent="." instance=ExtResource( 8 )]
position = Vector2( 872, 192 )

[node name="Hammer_Toad" parent="." instance=ExtResource( 7 )]
position = Vector2( 1568, 160 )

[node name="Weak_Toad4" parent="." instance=ExtResource( 12 )]
position = Vector2( 424, 272 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Position2D" parent="Enemies" instance=ExtResource( 13 )]
position = Vector2( 1968, 240 )

[node name="coin5" parent="." instance=ExtResource( 8 )]
position = Vector2( 1920, 248 )

[node name="coin6" parent="." instance=ExtResource( 8 )]
position = Vector2( 1024, 272 )

[node name="coin7" parent="." instance=ExtResource( 8 )]
position = Vector2( 1048, 272 )

[node name="coin8" parent="." instance=ExtResource( 8 )]
position = Vector2( 1280, 272 )

[node name="coin9" parent="." instance=ExtResource( 8 )]
position = Vector2( 1928, 208 )

[node name="coin10" parent="." instance=ExtResource( 8 )]
position = Vector2( 1968, 184 )

[node name="coin11" parent="." instance=ExtResource( 8 )]
position = Vector2( 2016, 248 )

[node name="coin12" parent="." instance=ExtResource( 8 )]
position = Vector2( 2008, 208 )

[node name="coin13" parent="." instance=ExtResource( 8 )]
position = Vector2( 1280, 232 )

[node name="coin14" parent="." instance=ExtResource( 8 )]
position = Vector2( 1336, 176 )

[node name="coin15" parent="." instance=ExtResource( 8 )]
position = Vector2( 1360, 176 )

[node name="coin16" parent="." instance=ExtResource( 8 )]
position = Vector2( 1544, 168 )

[node name="coin17" parent="." instance=ExtResource( 8 )]
position = Vector2( 1568, 168 )

[node name="coin18" parent="." instance=ExtResource( 8 )]
position = Vector2( 1600, 168 )

[node name="coin19" parent="." instance=ExtResource( 8 )]
position = Vector2( 1632, 168 )

[node name="coin20" parent="." instance=ExtResource( 8 )]
position = Vector2( 1656, 168 )

[connection signal="dead" from="Bowser" to="." method="_on_Bowser_dead"]
[connection signal="despausar" from="Bowser" to="." method="_on_Bowser_despausar"]
[connection signal="pausar" from="Bowser" to="." method="_on_Bowser_pausar"]
[connection signal="se_acabo" from="Bowser" to="Pipe" method="_on_Bowser_se_acabo"]
[connection signal="finished" from="StaticBody2D" to="." method="_on_StaticBody2D_finished"]
[connection signal="body_entered" from="Pipe" to="Bowser" method="_on_Pipe_body_entered"]
[connection signal="body_exited" from="Pipe" to="Bowser" method="_on_Pipe_body_exited"]
